feat: add signup endpoint

--- a/user-service/.env
+++ b/user-service/.env
@@ -1,4 +1,5 @@
 # Configuración del servidor
 PORT=8080
 
-DB="root:HiedraAlSol.07@tcp(127.0.0.1:3306)/chatapp_users?charset=utf8mb4&parseTime=True&loc=Local"
+# Configuración de la base de datos
+DB="root:HiedraAlSol.07@tcp(localhost:3306)/chatapp_users?charset=utf8mb4&parseTime=True&loc=Local"
