--- a/user-service/.env
+++ b/user-service/.env
@@ -3,3 +3,6 @@ PORT=8080
 
 # Configuración de la base de datos
 DB="root:HiedraAlSol.07@tcp(localhost:3306)/chatapp_users?charset=utf8mb4&parseTime=True&loc=Local"
+
+# JWT
+SECRET= asasasasasdff4r
